# goalie

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists_linux.txt  CMakeLists_win.txt  README.md  balldetector.cpp  balldetector.hpp  goalie.cpp  hsvfilter.cpp  hsvfilter.hpp  ifilter.hpp  makefile  median.hpp  opencv-test.cpp  rgbfilter.cpp  rgbfilter.hpp  timer.hpp
avr/: Makefile  adc.c  adc.h  ramp.c  ramp.h  steppercontorl2.c  steppercontrol.c  types.h  uart.h  uart_mega8.c
linux/: CMakeLists.txt  follow.cpp  follow2.cpp  raspicam_v4l_howto.txt  startdriver.sh  webui.cpp
linux/raspicamcv/: Makefile  RaspiCamCV.c  RaspiCamTest.c
linux/raspicamcv/objs/: RaspiCLI.d  RaspiCamCV.d  RaspiCamControl.d  RaspiCamTest.d
linux/utils/: stream_rtp.sh
test/: ramptest.cpp
www/: goalie.html
